# Agora-With-SenseTime

./: Podfile  azure-pipelines.yml
Agora-Video-With-SenseTime-Android/: README.md  settings.gradle
Agora-Video-With-SenseTime-Android/STMobileJNI/: .project  CMakeLists.txt  build.gradle  consumer-rules.pro
Agora-Video-With-SenseTime-Android/STMobileJNI/src/main/: AndroidManifest.xml
Agora-Video-With-SenseTime-Android/STMobileJNI/src/main/java/com/sensetime/stmobile/: STAvatarParams.java  STBodyBeautifyResult.java  STBodyBeautyParamsType.java  STCommonNative.java  STEffectInImage.java  STMobileAnimalNative.java  STMobileAttributeFaceFeatureNative.java  STMobileAuthentificationNative.java  STMobileAvatarNative.java  STMobileColorConvertNative.java  STMobileEffectNative.java  STMobileEffectParams.java  STMobileFaceAttributeNative.java  STMobileFaceVerifyNative.java  STMobileGreenScreenSegmentNative.java  STMobileHumanActionNative.java  STMobileObjectTrackNative.java  STMobilePinchAvatarNative.java  STSoundPlay.java  STStickerEvent.java
Agora-Video-With-SenseTime-Android/STMobileJNI/src/main/java/com/sensetime/stmobile/model/: STAnimalFace.java  STAnimationStateType.java  STAnimationTarget.java  STAttributeBoyEyebrowInfo.java  STAttributeBoyHairInfo.java  STAttributeEyelidInfo.java  STAttributeFaceFeature.java  STAttributeGirlEyebrowInfo.java  STAttributeGirlHairInfo.java  STAttributeGlassInfo.java  STAttributeMustacheInfo.java  STBodyAvatar.java  STBoneTransform.java  STClassifierResult.java  STColor.java  STEffect3DBeautyPartInfo.java  STEffectBeautyInfo.java  STEffectCustomParam.java  STEffectLipStickFinish.java  STEffectModuleInfo.java  STEffectPackageInfo.java  STEffectRenderInParam.java  STEffectRenderOutParam.java  STEffectTexture.java  STEffectTryonInfo.java  STEffectsTryOnRegionInfo.java  STFaceAttribute.java  STFaceExtraInfo.java  STFaceMesh.java  STFaceMeshList.java  STHandDynamicGesture.java  STHumanAction.java  STHumanActionSegments.java  STImage.java  STMeshIndex.java  STMobileBodyInfo.java  STMobileEarInfo.java  STMobileFaceInfo.java  STMobileFoot.java  STMobileForeheadInfo.java  (+13 more)
Agora-Video-With-SenseTime-Android/STMobileJNI/src/main/java/com/sensetime/stmobile/params/: STAnimalFaceParamsType.java  STAttributeFaceFeatureParams.java  STBeautyParamsType.java  STEffectBeautyGroup.java  STEffectBeautyParams.java  STEffectBeautyType.java  STEffectPackageState.java  STEffectParam.java  STFaceShape.java  STFilterParamsType.java  STHumanActionParamsType.java  STMobileModelType.java  STResultCode.java  STRotateType.java
Agora-Video-With-SenseTime-Android/STMobileJNI/src/main/java/com/sensetime/stmobile/sticker_module_types/: STCustomEvent.java
Agora-Video-With-SenseTime-Android/STMobileJNI/src/main/jni/: jvmutil.cpp  stmobile_animalface_jni.cpp  stmobile_attribute_face_feature_jni.cpp  stmobile_authentification_jni.cpp  stmobile_avatar_jni.cpp  stmobile_color_convert_jni.cpp  stmobile_common_jni.cpp  stmobile_effect_jni.cpp  stmobile_face_attribute_jni.cpp  stmobile_face_verify_jni.cpp  stmobile_green_screen_segment_jni.cpp  stmobile_humanaction_jni.cpp  stmobile_object_jni.cpp  stmobile_pinch_avatar_jni.cpp  stmobile_sound_play_jni.cpp  stmobile_sound_play_jni.h  stmobile_sticker_event_callback_jni.h  utils.cpp  utils.h  utils_avatar.cpp  utils_avatar.h  utils_effects.cpp  utils_effects.h  utils_human_action.cpp  utils_human_action.h
Agora-Video-With-SenseTime-Android/STMobileJNI/src/main/jni/prebuilt/include/: st_mobile_attribute_face_feature.h  st_mobile_effect.h  st_mobile_gen_avatar.h  st_mobile_human_action.h  st_mobile_license.h
Agora-Video-With-SenseTime-Android/STMobileJNI/src/main/jni/prebuilt/lib/: VERSION
Agora-Video-With-SenseTime-Android/app/: build.gradle  proguard-rules.pro
Agora-Video-With-SenseTime-Android/framework/: build.gradle
Agora-Video-With-SenseTime-Android/sensetime/: CMakeLists.txt  (+2 more)
Agora-Video-With-SenseTime-iOS/: .gitignore  Podfile  README.md  READNE.md  build.sh  ci.env.py  exportPlist.plist  setupSenseTime.sh
BeautifyExample/: BeautifyExample-Bridging-Header.h  MainViewController.m  TestController.swift  ViewController.m
BeautifyExample.xcodeproj/: project.pbxproj
SenseMe/: SenseMeFilter.h  SenseMeFilter.m
(+1085 files in other folders)
